fix: fix product name casuing overflow of incr/decr button

--- a/src/components/CartItemCard/CartItemCard.module.css
+++ b/src/components/CartItemCard/CartItemCard.module.css
@@ -15,6 +15,10 @@
 
 .name {
   text-align: center;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  max-inline-size: calc(var(--medium-gap) * 2.1);
+  max-block-size: 3lh;
 }
 
 .controls {
